Tue Aug  4 03:56:51 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tcltklib.c: fix trouble on old-style C function
	  declarations [ruby-core:22871].

	* ext/tk/lib/tcltklib.c: (ruby_1_8) fix warning about RUBY_RELEASE_DATE

	* ext/tk/lib/tk/multi-tk.rb: kill zombie threads.

	* ext/tk/lib/tk/fontchooser.rb: fix typo and support OptionObj.

	* ext/tk/lib/tk/{canvas.rb,virtevent.rb,image.rb,timer.rb}:
	  don't create unnecessary array.

Mon Aug  3 17:24:30 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_connect): return value was broken when some
	  error occurred.
	  [ruby-core:24234]

Sun Aug  2 06:08:17 2009  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* node.h (rb_thread_status): ISO C89 do not allow a comma at the end of enum.

	* parse.y (string_type): ditto.

Sat Aug  1 07:51:32 2009  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* lex.c: update.

Fri Jul 31 17:17:17 2009  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* parse.y: Support for { key: value } -style hash immediates.
	  [ruby-core:21946][ruby-core:22286]

	* keywords: ditto.

	* NEWS: ditto.

Tue Jul 28 15:48:15 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_event_all, rb_add_event_hook): merged thread-switch
	  events for RubyCocoa.  [ruby-dev:38924]

Tue Jul 28 04:34:05 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/extconf.rb: bug fix and ignore invalid Tcl/Tk libraries.

	* ext/tk/lib/config_list.in: bug fix and add a new option.

	* ext/tk/lib/README.tcltklib: update for a new option.

Sun Jul 26 19:17:33 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (argf_eof): go to the next file if called after ARGF.close
	  or ARGF.skip.  a patch from Mike Kasick at [ruby-core:24561].

Sun Jul 26 18:42:23 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (Init_IO): $FILENAME should correspond to the first elemen
	  of ARGV initially.

Fri Jul 24 20:33:49 2009  Akinori MUSHA  <knu@iDaemons.org>
